--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.5",
         "overtrue/laravel-ueditor": "~1.0",
+        "phpmailer/phpmailer": "^6.0",
         "predis/predis": "^1.1"
     },
     "require-dev": {
