--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "ioredis": "^3.1.4",
+        "laravel-echo": "^1.3.5",
         "socket.io": "^2.0.3"
     }
 }
